--- a/css/desktop-styles.css
+++ b/css/desktop-styles.css
@@ -119,10 +119,12 @@ display: none;
 .heading-background-purple {
   height: 60vh;
   background: url(../Images/purple.svg);
+  background-size: 100%;
 } 
 .heading-background-blue {
   height: 57vh;
   background: url(../Images/blue.svg);
+  background-size: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -359,6 +361,7 @@ right: 14px;
   background: black;
   border-radius: 50px;
 }
+
 
 /* *************** READY TO TRY ************************ */
 
