--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -216,7 +216,6 @@ height: 200px;
 .card-text,
 .card-button {
   text-align: center;
-  margin: 20px 0;
 }
 .services {
   height: 115vh;
@@ -236,10 +235,13 @@ height: 200px;
   border-radius: 10px;
 }
 .services-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: absolute;
   top: 50%;
   width: 90%;
-  /* height: 50vh; */
+  height: 45vh;
   padding: 30px;
   border: 2px solid black;
   border-radius: 10px;
@@ -254,7 +256,6 @@ height: 200px;
   font-size: 25px;
   color: white;
   background: #5B28B5;
-  margin-top: 20px;
 }
 .left-card {
     left: -100px;
@@ -359,10 +360,14 @@ height: 200px;
     position: relative;
   }
   .testimonial-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: absolute;
-    padding: 0 20px;
+    padding: 20px;
     border: 2px solid black;
     border-radius: 10px;
+    height: 35vh;
     width: 90%;
     transition: 0.3s;
   }
@@ -399,6 +404,7 @@ height: 200px;
 /* ************* READY ********************* */
 
 .ready {
+  margin: 50px 0;
   height: 370px;
   position: relative;
   display: flex;
@@ -422,7 +428,24 @@ height: 200px;
   color: white;
   background: #5B28B5;
 }
-.ready-background{
+/* .ready-background{
   position: absolute;
   top: 0;
+}
+.ready-background svg {
+  width: 100%;
+} */
+.ready-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  /* transform: rotate(180deg); */
+}
+
+.ready-background svg {
+width: 100%;
+/* height: 200px; */
 }
