--- a/css/home-styles.css
+++ b/css/home-styles.css
@@ -75,7 +75,6 @@ html,body
 }
 #toggler-div-2{
     top: 15px;
-    /* transition: .4s; */
 }
 #toggler-div-3{
     top: 30px;
@@ -83,7 +82,6 @@ html,body
 .collapsed-nav {
     height: 0px;
     background: var(--dark-purple);
-    overflow: hidden;
     transition: .4s;
 }
 .nav-links {
@@ -110,7 +108,7 @@ html,body
 .drop-down-menu {
     height: 0px;
     overflow: hidden;
-    transition: .3s;
+    transition: .5s;
 }
 .drop-down-link {
     display: flex;
@@ -118,8 +116,8 @@ html,body
     margin: 20px 0;
 }
 .drop-down-icon {
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     border-radius: 50px;
     background: var(--light-purple);
     margin: 0 10px 0 0;
@@ -128,6 +126,12 @@ html,body
     color: white;
     font-weight: lighter;
 }
+.menu-divider {
+  display: none;
+}
+.logo h3 {
+  display: none;
+}
 
 
 /* ****************** HEADING ********************* */
@@ -135,28 +139,16 @@ html,body
 .heading {
     height: 500px;
 }
-.heading-background-purple {
-    height: 60vh;
-    background-repeat: no-repeat;
-} 
-.heading-background-blue {
+.heading-wrap {
   position: relative;
-    height: 57vh;
+  width: 100%;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 50px 0;
+    z-index: 800;
 } 
 .wave {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
-.wave-2 {
   position: absolute;
   top: 0;
   left: 0;
@@ -168,9 +160,14 @@ html,body
 .vector {
 width: 100%;
 }
+.heading-left {
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .heading-title {
-  z-index: 1000;
     text-align: center;
 }
 .heading-title h1 {
@@ -192,10 +189,13 @@ width: 100%;
   text-align: center;
   margin: 30px 0 0 0 ;
 }
+.heading-right {
+  display: none;
+}
 
 /* ************************ LOVE ****************** */
 
-#love {
+.love {
     padding: 30px;
 }
 .love-title {
@@ -208,6 +208,11 @@ width: 100%;
     height: 60px;
     width: 60px;
     margin: 0 0 15px 0;
+    background-color: grey;
+    border-radius: 50px;
+}
+.item-icon-1 {
+  background: none;
 }
 .item-icon-1 img {
    width: 100%;
@@ -229,6 +234,12 @@ width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.services-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 .services-background {
     position: relative;
@@ -272,7 +283,8 @@ width: 100%;
   opacity: 0;
 }
 .controls {
-  width: 320px;
+  min-width: 320px;
+  width: 80%;
 }
 .selectors {
   display: flex;
@@ -375,7 +387,7 @@ width: 100%;
     border-radius: 10px;
     height: 300px;
     width: 90%;
-    transition: 0.3s;
+    transition: 0.5s;
   }
   .card-text p {
     line-height: 1.4;
@@ -393,6 +405,7 @@ width: 100%;
   .card-author p {
     font-size: 14px;
     font-weight: bold;
+    color: var(--purple);
   }
   .test-middle {
     transform: translateY(-10px);
@@ -475,13 +488,23 @@ width: 100%;
 }
 
 
+/* ************************************************************** */
 /* ****************  MEDIA QUERIES  ***************************** */
+/* ************************************************************** */
+
+
+/* *******************  TABLET SCREENS **********************  */
 
 @media only screen and (min-width: 600px) {
+  .purple-title {
+    font-size: 2rem;
+  }
   .nav-wrap {
     display: flex;
     justify-content: space-between;
     padding: 0 30px;
+    position: relative;
+    z-index: 1000;
   }
   .navbar {
     padding: 0;
@@ -508,5 +531,294 @@ width: 100%;
    color: var(--dark-purple);
  }
 
-  
+ /* ********  DROP DOWN ********* */
+ #services-drop-down {
+  position: relative;
+ }
+ .services-nav-link i {
+   color: var(--dark-purple);
+  }
+  .drop-down-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    position: absolute;
+    top: 62px;
+    left: -80px;
+    height: 0px;
+    width: 260px;
+    background-color: white;
+    border-radius: 0 0 10px 10px;
+  }
+  .drop-down-link {
+    margin: 10px 0;
+  }
+  .drop-down-link h3 {
+    color: black;
+    font-weight: normal;
+  }
+  .drop-down-icon {
+    margin: 10px 10px 10px 0;
+  }
+  .menu-divider {
+    display: block;
+    height: 1px;
+    background-color: rgba(128, 128, 128, 0.2);
+    border: none;
+  }
+  /* ****************  HEADING ************************ */
+
+  .heading-text {
+    z-index: 0;
+  }
+  /* ******************  SERVICES  ************************* */
+  .card-title h2 {
+    font-size: 30px;
+  }
+  .service-card-text p {
+    font-size: 20px;
+    line-height: 1.6;
+  }
+
+  /* *********************  TESTIMONIALS  ******************* */
+
+  .card-text p{
+    font-size: 20px;
+    line-height: 1.6;
+  }
+  .card-author p {
+    font-size: 16px;
+  }
+}
+
+/* ********************  LARGE TABLET SCREENS  **************************** */
+
+@media only screen and (min-width: 768px) {
+
+  /* ********* NAVBAR ********* */
+  .nav-wrap {
+    padding: 0 5%;
+  }
+  .logo {
+    display: flex;
+    align-items: center;
+  }
+  .logo h3 {
+    display: block;
+  }
+
+  /* ************  HEADING  ******************* */
+
+  .heading {
+    height: 600px;
+  }
+  .heading-wrap {
+    display: flex;
+    flex-direction: row;
+  }
+  .heading-left {
+    width: 70%;
+  }
+  .heading-title {
+    width: 70%;
+  }
+  .heading-title h1 {
+    text-align: left;
+    font-size: 2.6rem;
+  }
+  .heading-text p {
+    text-align: left;
+  }
+  .heading-button {
+    text-align: left;
+    width: 70%;
+  }
+  .heading-right {
+    position: relative;
+    display: flex;
+    width: 50%;
+    height: 100%;
+    z-index: 1000;
+  }
+  .heading-right img {
+    position: absolute;
+  }
+  .heading-img-1 img {
+    left: -90px;
+    width: 280px;
+  }
+  .heading-img-2 img {
+    top: 50px;
+    left: 200px;
+    width: 100px;
+  }
+  /* ***********************  WHY YOU'LL LOVE US  ******************** */
+  .love-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .item-icon {
+    margin: auto;
+  }
+  .love-item {
+    width: 70%;
+    text-align: center;
+    margin: 0 0 50px 0;
+  }
+
+  /* ******************  SERVICES  ************************* */
+  .card-title h2 {
+    font-size: 32px;
+  }
+  .service-card-text p {
+    line-height: 1.6;
+  }
+
+}
+
+/* *************  DESKTOP SCREENS  **************** */
+
+@media only screen and (min-width: 992px) {
+
+  .purple-title {
+    font-size: 2.8rem;
+  }
+
+/* **************  HEADING  ******************** */
+  .heading {
+    height: 700px;
+  }
+  .heading-img-1 img {
+    left: -90px;
+    width: 330px;
+  }
+  .heading-img-2 img {
+    top: 70px;
+    left: 230px;
+    width: 110px;
+  } 
+
+  /* ***********************  WHY YOU'LL LOVE US  ******************** */
+  .love-items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+  .item-icon {
+    margin: 10px 0;
+  }
+  .love-item {
+    width: 30%;
+    text-align: left;
+    margin: 50px;
+  }
+  /* ******************  SERVICES  ************************* */
+  .services {
+    height: 800px;
+    padding: 0px 100px;
+  }
+  .services-title {
+    margin-bottom: 50px;
+  }
+  .services-wrap {
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .services-background {
+    width: 350px;
+    height: 495px
+  }
+  .services-card {
+    top: 100px;
+    width: 500px;
+    height: 300px;
+  }
+  .middle-card {
+    left: 70%;
+  }
+  .right-card {
+    left: 400px;
+  }
+  .left-card {
+    left: 120px;
+  }
+  .card-title h2 {
+    font-size: 25px;
+    text-align: left;
+  }
+  .service-card-text p {
+    font-size: 18px;
+    text-align: left;
+  }
+  .card-button {
+    text-align: left;
+  }
+  .selectors {
+    width: 200px;
+    margin: 0 auto -55px;
+  }
+  .controls {
+    width: 350px;
+    margin: 0 30px 0;
+  }
+
+  /* ********************  TESTIMONIALS  ************************ */
+  .testimonial-cards {
+    height: 350px;
+    width: 60%;
+    margin-top: 50px;
+  }
+}
+
+
+/* *****************  LARGE DESKTOP SCREENS  ************************ */
+@media only screen and (min-width: 1200px) {
+
+  .services-background {
+    width: 400px;
+    height: 550px
+  }
+  .services-card {
+    top: 150px;
+    width: 550px;
+    height: 300px;
+  }
+  .middle-card {
+    left: 70%;
+  }
+  .right-card {
+    left: 450px;
+  }
+}
+/* *****************  EXTRA LARGE DESKTOP SCREENS  ************************ */
+@media only screen and (min-width: 1450px) {
+
+  .services {
+    height: 900px;
+  }
+  .services-background {
+    width: 500px;
+    height: 650px
+  }
+  .services-card {
+    top: 200px;
+    width: 650px;
+    height: 350px;
+  }
+  .middle-card {
+    left: 60%;
+  }
+  .right-card {
+    left: 450px;
+  }
+  .card-title h2 {
+    font-size: 30px;
+  }
+  .service-card-text p {
+    font-size: 22px;
+  }
 }
