--- a/sass/components/_carousel-controls.scss
+++ b/sass/components/_carousel-controls.scss
@@ -3,7 +3,7 @@
     min-width: 320px;
     max-width: 400px;
     width: 80%;
-    margin: auto;
+    margin: 30px auto;
     @include responsive($tablet_large) {
         width: 400px;
         margin: 0 30px 0;
