--- a/sass/pages/about/_instagram.scss
+++ b/sass/pages/about/_instagram.scss
@@ -1,25 +1,92 @@
-.instagram-title h2 {
-    font-size: 28px;
-    color: $purple;
-    @include tilt_right;
-}
-.instagram-text p {
-    font-size: 25px;
-}
-.instagram-carousel {
-    height: 200px;
-    width: 100%;
+.instagram {
+    height: 475px;
+    margin: 80px 0 30px;
+    padding: 15px;
+    @include flex_centered(column);
 
-    &-inner {
-        @include flex_centered(row);
-        overflow: hidden;
-        height: 100%;
+    .instagram-title h2 {
+        font-size: 28px;
+        color: $purple;
+        @include tilt_right;
+    }
+    .instagram-text {
+        margin: 20px 0;
+        width: 95%;
+        max-width: 992px;
+        p {
+        font-size: 25px;
+        margin-top: 30px;
+        }
+    }
+    .instagram-carousel {
+        @include flex_centered(column);
+        height: 330px;
+        width: 100%;
+        
+        &-inner {
+            position: relative;
+            overflow: hidden;
+            height: 150px;
+            width: 88%;
+            
+            .instagram-carousel-items {
+                left: 0px;
+                height: 100%;
+                position: absolute;
+                width: 790px;
+                @include flex_centered(row);
+                justify-content: space-between;
+                transition: .4s;
 
-        &-item {
-            height: 100%;
-            width: 45%;
-            margin: 0 10px;
-            background-color: grey;
+                &-item {
+                    height: 100%;
+                    min-width: 150px;
+                    margin: 0 10px;
+                    background-color: grey;
+                }
+                &-item:first-child {
+                    margin-left: 0;
+                }
+            }
         }
     }
 }
+
+// <section class="instagram">
+//         <div class="instagram-text">
+//             <div class="instagram-title">
+//                 <h2 class="font-medium">Check out her <br>work on instagram</h2>
+//             </div>
+//             <p>@crazy_about_colour</p>
+//         </div>
+//         <div class="instagram-carousel">
+//           <div class="instagram-carousel-inner">
+//             <div class="instagram-carousel-inner-item"></div>
+//             <div class="instagram-carousel-inner-item"></div>
+//             <div class="instagram-carousel-inner-item"></div>
+//             <div class="instagram-carousel-inner-item"></div>
+//             <div class="instagram-carousel-inner-item"></div>
+//           </div>
+//           <div class="controls">
+//             <div class="selectors test-selectors">
+//               <div class="selector-active"></div>
+//               <div></div>
+//               <div></div>
+//               <div></div>
+//               <div></div>
+//             </div>
+//             <div class="arrows">
+//               <div class="arrow-left test-prev-btn">
+//                 <div class="arrow-left-1"></div>
+//                 <div class="arrow-left-2"></div>
+//                 <div class="arrow-left-3"></div>
+//               </div>
+//               <div class="arrow-right test-next-btn">
+//                 <div class="arrow-right-1"></div>
+//                 <div class="arrow-right-2"></div>
+//                 <div class="arrow-right-3"></div>
+//               </div>
+//             </div>
+//           </div>
+//         </div>
+//     </section>
