--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,7 +13,7 @@
     .footer-logo {
       height: 60px;
       width: 60px;
-      background-image: url(../images/footer-logo.png);
+      background-image: url(../images/footer/footer-logo.png);
       background-size: contain;
       background-repeat: no-repeat;
       margin: 10px 0;
