--- a/sass/main.css
+++ b/sass/main.css
@@ -111,7 +111,7 @@ html, body {
   position: relative;
   height: 400px;
   margin-bottom: 170px;
-  background-image: url("../images/services-background.png");
+  background-image: url("../images/home/services-background.png");
   background-size: cover;
   width: 90%;
   border-radius: 10px;
@@ -657,7 +657,7 @@ html, body {
 .navbar .logo .nav-brand {
   height: 60px;
   width: 60px;
-  background-image: url("../images/paint-splatter.png");
+  background-image: url("../images/navigation/paint-splatter.png");
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -699,6 +699,7 @@ html, body {
   background: #1D1330;
   -webkit-transition: .4s;
   transition: .4s;
+  overflow: hidden;
 }
 
 .collapsed-nav .nav-links {
@@ -835,6 +836,11 @@ html, body {
 }
 
 @media only screen and (min-width: 600px) {
+  .current-page {
+    position: relative;
+    border-bottom: 3px solid #5B28B5;
+    font-family: "Gotham Medium";
+  }
   .nav-wrap {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -985,7 +991,7 @@ html, body {
 .footer .footer-logo {
   height: 60px;
   width: 60px;
-  background-image: url(../images/footer-logo.png);
+  background-image: url(../images/footer/footer-logo.png);
   background-size: contain;
   background-repeat: no-repeat;
   margin: 10px 0;
@@ -1472,6 +1478,7 @@ html, body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-top: 100px;
   }
   .about-heading-img {
     width: 40%;
@@ -1556,7 +1563,6 @@ html, body {
   left: 0px;
   height: 100%;
   position: absolute;
-  width: 790px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1581,9 +1587,49 @@ html, body {
   height: 100%;
   min-width: 150px;
   margin: 0 10px;
-  background-color: grey;
+  background-size: cover;
+  border-radius: 10px;
 }
 
 .instagram .instagram-carousel-inner .instagram-carousel-items-item:first-child {
   margin-left: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .instagram {
+    height: 600px;
+    padding: 0 10%;
+  }
+  .instagram .instagram-title h2 {
+    font-size: 32px;
+  }
+  .instagram .instagram-title h2 br {
+    display: none;
+  }
+  .instagram .instagram-carousel {
+    height: 330px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (min-width: 1200px) {
+  .instagram .instagram-carousel {
+    height: 380px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .instagram .instagram-carousel-inner {
+    height: 100%;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .instagram .instagram-carousel-inner .instagram-carousel-items-item {
+    min-width: 250px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (min-width: 1200px) {
+  .instagram .instagram-carousel-inner .instagram-carousel-items-item {
+    min-width: 300px;
+  }
 }
