--- a/sass/pages/about/_header.scss
+++ b/sass/pages/about/_header.scss
@@ -41,6 +41,7 @@
 @include responsive($desktop){ 
     .about-heading {
         @include flex_centered(row-reverse);
+        margin-top: 100px;
 
         &-img {
             width: 40%;
