--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -78,7 +78,7 @@
                 height: 0px;
                 overflow: hidden;
                 transition: .5s;
-                z-index: 1001;
+                z-index: 1000;
 
                 .menu-divider {
                     display: none;
@@ -150,7 +150,6 @@
       justify-content: space-between;
       padding: 0 30px;
       position: relative;
-      z-index: 1000;
     
         .purple-title {
             font-size: 2.3rem;
@@ -167,6 +166,7 @@
             align-items: center;
             height: 100px;
             background: white;
+            overflow: visible;
 
             .nav-links {
                 display: flex;
@@ -174,6 +174,8 @@
 
                 .nav-link {
                     margin: 0 20px;
+                    position: relative;
+                    z-index: 1000;
 
                     a {
                     font-size: 20px;
@@ -186,6 +188,7 @@
                 #services-drop-down {
                     position: relative;
                     
+                    
                     i {
                         color: $dark_purple;
                     }
@@ -193,12 +196,13 @@
                         @include flex_centered(column);
                         justify-content: flex-end;
                         position: absolute;
-                        top: 25px;
+                        top: 31px;
                         left: -80px;
                         height: 0px;
                         width: 260px;
                         background-color: white;
                         border-radius: 0 0 10px 10px;
+                        z-index: 999;
 
                         .drop-down-link {
                             margin: 10px 0;
@@ -221,7 +225,7 @@
                 }
                 #services-drop-down:hover .drop-down-menu {
                     height: 250px;
-                    }
+                }
             } 
         }
     }
