--- a/sass/pages/about/_header.scss
+++ b/sass/pages/about/_header.scss
@@ -16,7 +16,7 @@
         }
         background-size: cover;
         background-repeat: no-repeat;
-        z-index: 9000;
+        // z-index: 9000;
     }
     &-text {
         padding: 15px;
